--- a/src/main/resources/templates/html/dayLogin.html
+++ b/src/main/resources/templates/html/dayLogin.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>DJ</title>
-    <script src="src/main/resources/static/goodStudy.js" type="text/javascript"></script>
-    <link rel="shortcut icon" href="src/main/resources/static/wallpaper/smortIcon.png" />
-    <link rel="Bookmark" href="src/main/resources/static/wallpaper/smortIcon.png">
-    <link rel="stylesheet" href="src/main/resources/static/css/style.css">
-    <link type="text/css" href="src/main/resources/static/css/starry.css" rel="stylesheet"/>
+    <script src="../../static/goodStudy.js" type="text/javascript"></script>
+    <link rel="shortcut icon" href="../../static/wallpaper/smortIcon.png" />
+    <link rel="Bookmark" href="../../static/wallpaper/smortIcon.png">
+    <link rel="stylesheet" href="../../static/css/style.css">
+    <link type="text/css" href="../../static/css/starry.css" rel="stylesheet"/>
     <style type="text/css">
         * { margin:0; padding:0;}
 
         .day_wallpaper {
-            /*background: url("src/main/resources/static/wallpaper/Home_fj1.jfif") no-repeat;*/
+            /*background: url("../../static/wallpaper/Home_fj1.jfif") no-repeat;*/
             background-size: 100%;
             text-align:center;
             overflow: hidden;
@@ -47,7 +47,7 @@
 <body class="day_wallpaper" id="wallpaper" oncontextmenu='return false' ondragstart='return false' onselectstart= 'return false' onselect='return false' oncopy='return false' onbeforecopy='return false' onmouseup='return false'>
 <div>
     <!--logo-->
-    <img src="src/main/resources/static/wallpaper/dj.png" alt="DJ" title="DJ" style="width: 72px;display: block;margin-left: 300px;">
+    <img src="../../static/wallpaper/dj.png" alt="DJ" title="DJ" style="width: 72px;display: block;margin-left: 300px;">
     <!--手表区-->
     <div class="container" style="position: absolute;right: 10px;top: 0px;display: none">
         <div class="casio-f91w">
@@ -131,7 +131,7 @@
     <div id="stars3"></div>
 </div>
 
-<script src="src/main/resources/static/js/mouseMoves.js" ></script>
-<script src="src/main/resources/static/js/script.js" ></script>
+<script src="../../static/js/mouseMoves.js" ></script>
+<script src="../../static/js/script.js" ></script>
 </body>
 </html>
